--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
             <div class="sitx-header__bgc">
                 <img src="./img/Path.svg" alt="img">
             </div>
-            <a href="#">Dark Mode</a>
+            <a class="sitx-header__moder" href="#">Dark Mode</a>
         </div>
     </header>
     <main class="sitx-main">
 
         <section class="input">
-            
-            <input class="name" type="text" id="input" name="name" placeholder="Search for a country…">
+                <input class="name" type="text" id="input" name="name" placeholder="Search for a country…">
 
             <select class="input__select" name="cars" id="cars">
                 <div class="inner__option">
