--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    
     <header class="sitx-header">
         <div class="sitx-header__inner">
             <a href="#">Where in the world?</a>
@@ -18,7 +19,7 @@
             <div class="sitx-header__bgc">
                 <img src="./img/Path.svg" alt="img">
             </div>
-            <a class="sitx-header__moder" href="#">Dark Mode</a>
+            <a class="sitx-header__moder" href="#">Dark</a>
         </div>
     </header>
     <main class="sitx-main">
@@ -41,106 +42,10 @@
 
         <section class="hero">
             <ul class="hero__inner-taxt">
-                <li class="hero__link">
-                    <img src="./img/img2.png" alt="img2">
-                    <div class="hero__text">
-                        <h2>Germany</h2>
-                        <p> <span class="hero__span">Population:</span> 81,770,900</p>
-                        <p>
-                            <span class="hero__span"> Region: </span> Europe
-                        </p>
-                        <p> <span class="hero__span"> Capital:</span> Berlin</p>
-                    </div>
-                </li>
-
-                <li class="hero__link">
-                    <img src="./img/img3.png" alt="img2">
-                    <div class="hero__text">
-                        <h2>United States of America</h2>
-                        <p> <span class="hero__span">Population:</span>323,947,000</p>
-                        <p>
-                            <span class="hero__span"> Region: </span>Americas
-                        </p>
-                        <p> <span class="hero__span"> Capital:</span>Washington, D.C.</p>
-                    </div>
-                </li>
-
-                <li class="hero__link">
-                    <img src="./img/img4.png" alt="img2">
-                    <div class="hero__text">
-                        <h2>Brazil</h2>
-                        <p> <span class="hero__span">Population:</span>206,135,893
-                        </p>
-                        <p>
-                            <span class="hero__span"> Region: </span> Americas
-                        </p>
-                        <p> <span class="hero__span"> Capital:</span> Brasília</p>
-                    </div>
-                </li>
-
-                <li class="hero__link">
-                    <img src="./img/img5.png" alt="img2">
-                    <div class="hero__text">
-                        <h2>Iceland</h2>
-                        <p> <span class="hero__span">Population:</span>334,300</p>
-                        <p>
-                            <span class="hero__span"> Region: </span> Europe
-                        </p>
-                        <p> <span class="hero__span"> Capital:</span> Reykjavík</p>
-                    </div>
-                </li>
-
-                <li class="hero__link">
-                    <img src="./img/img6.png" alt="img2">
-                    <div class="hero__text">
-                        <h2>Afghanistan</h2>
-                        <p> <span class="hero__span">Population:</span> 27,657,145</p>
-                        <p>
-                            <span class="hero__span"> Region: </span> Asia
-                        </p>
-                        <p> <span class="hero__span"> Capital:</span>Kabul</p>
-                    </div>
-                </li>
-
-                <li class="hero__link">
-                    <img src="./img/img7.png" alt="img2">
-                    <div class="hero__text">
-                        <h2>Germany</h2>
-                        <p> <span class="hero__span">Population:</span> 81,770,900</p>
-                        <p>
-                            <span class="hero__span"> Region: </span> Europe
-                        </p>
-                        <p> <span class="hero__span"> Capital:</span> Berlin</p>
-                    </div>
-                </li>
-
-                <li class="hero__link">
-                    <img src="./img/img8.png" alt="img2">
-                    <div class="hero__text">
-                        <h2>Germany</h2>
-                        <p> <span class="hero__span">Population:</span> 81,770,900</p>
-                        <p>
-                            <span class="hero__span"> Region: </span> Europe
-                        </p>
-                        <p> <span class="hero__span"> Capital:</span> Berlin</p>
-                    </div>
-                </li>
-
-                <li class="hero__link">
-                    <img src="./img/img9.png" alt="img2">
-                    <div class="hero__text">
-                        <h2>Germany</h2>
-                        <p> <span class="hero__span">Population:</span> 81,770,900</p>
-                        <p>
-                            <span class="hero__span"> Region: </span> Europe
-                        </p>
-                        <p> <span class="hero__span"> Capital:</span> Berlin</p>
-                    </div>
-                </li>
-
             </ul>
         </section>
     </main>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
