--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <header class="sitx-header">
         <div class="sitx-header__inner">
-            <a href="#">Where in the world?</a>
+            <a class="link" href="#">Where in the world?</a>
         </div>
         <div class="sitx-header__link">
             <div class="sitx-header__bgc">
