--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Document</title>
+    <title>Dvlatlar</title>
+    <link rel="icon" type="image/x-icon" href="./img/global.svg">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         </div>
         <div class="sitx-header__link">
             <div class="sitx-header__bgc">
-                <img src="./img/Path.svg" alt="img">
+                <img src="./img/mon.svg" alt="img">
             </div>
             <a class="sitx-header__moder" href="#">Dark</a>
         </div>
