--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         </div>
         <div class="sitx-header__link">
             <div class="sitx-header__bgc">
-                <img src="./img/mon.svg" alt="img">
+                <img id="mon" src="./img/mon.svg" alt="img">
+                <img id="sun" src="./img/sun.svg" alt="img">
             </div>
             <a class="sitx-header__moder" href="#">Dark</a>
         </div>
