--- a/index.html
+++ b/index.html
@@ -30,18 +30,16 @@
             <input class="name" type="text" id="input" name="name" placeholder="Search for a country…">
 
             <select class="input__select" name="cars" id="cars">
-                <div class="inner__option">
-                    <option value="Filter by Region">Filter by Region</option>
+                    <option value="All">All</option>
                     <option value="Africa">Africa</option>
                     <option value="America">America</option>
                     <option value="Asia">Asia</option>
                     <option value="Europe">Europe</option>
                     <option value="Oceania">Oceania</option>
-                </div>
-
+                    <option value="ame">Filter by Region</option>
             </select>
         </section>
-
+   <p class="erro">bunday davlat yoq</p>
         <section class="hero">
             <ul class="hero__inner-taxt">
             </ul>
