--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Dvlatlar</title>
+    <title>Davlatlar</title>
     <link rel="icon" type="image/x-icon" href="./img/global.svg">
 </head>
 
@@ -39,7 +39,7 @@
                     <option value="ame">Filter by Region</option>
             </select>
         </section>
-   <p class="erro">bunday davlat yoq</p>
+   <!-- <p class="erro">bunday davlat yoq</p> -->
         <section class="hero">
             <ul class="hero__inner-taxt">
             </ul>
